2005-10-20  Richard Guenther  <rguenther@suse.de>

PR c++/24439
	* fold-const.c (invert_truthvalue): Handle COND_EXPR with
	void type operands.

	* g++.dg/tree-ssa/pr24439.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105678 138bc75d-0d04-0410-961f-82ee72b054a4