gcc/testsuite/g++.dg/tree-ssa/pr24439.C
@@ -1,0 +1,10 @@
+/* { dg-do compile } */
+
+/* We used to ICE in invert_truthvalue on the void type
+   2nd argument of the COND_EXPR.  */
+
+void foo(void)
+{
+  int value=1;
+  !(value?true:throw);
+}
